Fix using actual photos of currently walking dog

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   <div class="card-header color-white bg-blue"><span data-bind="text: name"></span></div>
                   <!-- Slider container -->
                   <div class="swiper-container swiper-init" data-pagination=".swiper-pagination">
-                    <div class="swiper-wrapper" data-bind="foreach: activeDog.photos">
+                    <div class="swiper-wrapper" data-bind="foreach: photos">
                       <div class="swiper-slide"><img data-bind="attr: { src: $data }" width="100%"></div>
                     </div>
                     <div class="swiper-pagination"></div><!-- populated automatically -->
