Remove unused variable mySwiper in app.js and unused attributes for swiper pagination in index/dog.html

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                   <div class="card-header color-white bg-blue"><span data-bind="text: name"></span></div>
 
                   <!-- Slider container -->
-                  <div class="swiper-container" data-pagination=".swiper-pagination">
+                  <div class="swiper-container">
                     <div class="swiper-wrapper" data-bind="foreach: photos">
                       <div class="swiper-slide"><img data-bind="attr: { src: $data }" width="100%"></div>
                     </div>
