--- a/dog.html
+++ b/dog.html
@@ -14,7 +14,7 @@
   <!-- Page content -->
   <div class="page-content">
     <!-- Image carousel -->
-    <div class="swiper-container" data-pagination=".swiper-pagination">
+    <div class="swiper-container">
       <div class="swiper-wrapper" data-bind="foreach: activeDog.photos">
         <div class="swiper-slide">
           <img data-bind="attr: { src: $data }" width="100%">
