Display person walking dog on 'walking now' view

--- a/walking-now.html
+++ b/walking-now.html
@@ -38,6 +38,7 @@
                   <div class="item-title"><span data-bind="text: name"></span></div>
                 </div>
                 <div class="item-subtitle"><span data-bind="text: $parent.walkingRelativeTimeAndDuration($data)"></span></div>
+                <div class="item-subtitle"><strong><span data-bind="text: walker"></span></strong> is walking this dog</div>
               </div>
             </div>
           </a>
