Add create dog to index Add block card to create dog so that the save button does not fill the full width

--- a/create-dog.html
+++ b/create-dog.html
@@ -53,9 +53,11 @@
           </div>
         </li>
         <!--TODO: Photo Browser goes here -->
-        <li>
-          <a href="dog.html" class="button button-raised button-fill" style="border: 0;" data-bind="click: addDog">Save</a>
-        </li>
+        <div class="list-block card">
+          <li>
+            <a href="dog.html" class="button button-raised button-fill" style="border: 0;" data-bind="click: addDog">Save</a>
+          </li>
+        </div>
       </ul>
     </div>
   </div>
