--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
               <div class="navbar-inner">
                 <div class="left"><a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a></div>
                 <div class="center">Home</div>
+                <div class="right">
+                  <a href="create-dog.html" class="link icon-only"> <i class="icon icon-plus"></i></a>
+                </div>
               </div>
             </div>
 
