Add view in map function to pan the map to center of active dog's kennel

--- a/dog.html
+++ b/dog.html
@@ -22,6 +22,10 @@
       </div>
       <div class="swiper-pagination"></div><!-- populated automatically -->
     </div>
+    <!-- View in map -->
+    <div class="content-block">
+      <a href="#" class="button button-raised button-fill" data-bind="click: viewInMap(activeDog)">View in Map</a>
+    </div>
     <!-- Walk and shower -->
     <div class="content-block">
       <div class="row">
