--- a/kennel-map.html
+++ b/kennel-map.html
@@ -2,7 +2,8 @@
   <!-- Top Navbar-->
   <div class="navbar">
     <div class="navbar-inner">
-      <div class="left"><a href="#" class="link back icon-only"><i class="icon icon-back"></i></a></div>
+      <div class="left" data-bind="ifnot: isViewInMap"><a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a></div>
+      <div class="left" data-bind="if: isViewInMap"><a href="#" class="link icon-only back" data-bind="click: resetViewInMap"><i class="icon icon-back"></i></a></div>
       <div class="center">Kennel Map</div>
     </div>
   </div>
