--- a/dog.html
+++ b/dog.html
@@ -71,7 +71,7 @@
             <span data-bind="text: log"></span>
           </div>
         </div>
-        <div class="card-footer"><span data-bind="text: submitter"></span> posted on <span data-bind="text: moment(date).calendar()"></span></div>
+        <div class="card-footer"><span data-bind="text: 'Posted by ' + submitter"></span> <span data-bind="text: moment(date).calendar()"></span></div>
       </div>
     </div>
     <div class="card" data-bind="if: activeDog.incident().length > 2">
