Add data validation for dog name when creating dog
Remove dog.html href in save button and perform routing in js instead.
This is so that the next page is loaded only after all validation is done to prevent
a null dog error.

--- a/create-dog.html
+++ b/create-dog.html
@@ -55,7 +55,7 @@
         <!--TODO: Photo Browser goes here -->
         <div class="list-block card">
           <li>
-            <a href="dog.html" class="button button-raised button-fill" style="border: 0;" data-bind="click: addDog">Save</a>
+            <a href="#" class="button button-raised button-fill" style="border: 0;" data-bind="click: addDog">Save</a>
           </li>
         </div>
       </ul>
