Add data validation for edit dog profile

--- a/edit-dog.html
+++ b/edit-dog.html
@@ -54,7 +54,7 @@
         </li>
         <!--TODO: Photo Browser goes here -->
         <li>
-          <a href="dog.html" class="button button-raised button-fill" style="border: 0;">Save</a>
+          <a href="#" class="button button-raised button-fill" style="border: 0;" data-bind="click: updateDog">Save</a>
         </li>
       </ul>
     </div>
