--- a/walking-now.html
+++ b/walking-now.html
@@ -30,7 +30,7 @@
     <div class="list-block media-list list-block-search searchbar-found" style="margin-top: 0;">
       <ul class="dogs-list" data-bind="foreach: walking">
         <li>
-          <a href="dog.html" class="item-link" data-bind="click: $parent.retrieveDog">
+          <a href="dog.html" class="item-link" data-bind="click: $parent.findDogAndLoad(name)">
             <div class="item-content">
               <div class="item-media"><img data-bind="attr: { src: $data.photos[0], width: '48px' }"></div>
               <div class="item-inner">
