Change subtitle of Walking now page

--- a/walking-now.html
+++ b/walking-now.html
@@ -37,8 +37,7 @@
                 <div class="item-title-row">
                   <div class="item-title"><span data-bind="text: name"></span></div>
                 </div>
-                <div class="item-subtitle"><span data-bind="text: $parent.walkingRelativeTimeAndDuration($data)"></span></div>
-                <div class="item-subtitle"><strong><span data-bind="text: walker"></span></strong> is walking this dog</div>
+                <div class="item-subtitle" style="white-space: normal"><span data-bind="text: $parent.walkingRelativeTimeAndDuration($data)"></span> with <strong><span data-bind="text: walker"></span></strong></div>
               </div>
             </div>
           </a>
