Fix gender text to align with text fields below on dog profile

--- a/dog.html
+++ b/dog.html
@@ -26,13 +26,14 @@
     <!-- Gender -->
     <div class="content-block">
       <div class="row">
-        <div class="col-70" style="line-height: 36px;">
+        <div class="col-40" style="line-height: 36px;">
           <strong>Gender</strong>
         </div>
         <div class="col-30" style="line-height: 36px; text-align: center;">
           <span data-bind="if: activeDog.gender == 0">Male</span>
           <span data-bind="if: activeDog.gender == 1">Female</span>
         </div>
+        <div class="col-30"></div>
       </div>
     </div>
 
