Add behaviour for simulating choosing photos when creating dog

--- a/create-dog.html
+++ b/create-dog.html
@@ -53,7 +53,17 @@
           </div>
         </li>
         <!--TODO: Photo Browser goes here -->
-        <div class="list-block card">
+        <li>
+          <div class="item-content">
+            <div class="item-inner">
+              <div class="item-title label">Photos</div>
+              <div class="item-input">
+                <img data-bind="attr: { src: createDogPicture }, click: picturePicker" width="100%"></img>
+              </div>
+            </div>
+          </div>
+        </li>
+        <div class="content-block">
           <li>
             <a href="#" class="button button-raised button-fill" style="border: 0;" data-bind="click: addDog">Save</a>
           </li>
