--- a/dog-incidents.html
+++ b/dog-incidents.html
@@ -29,5 +29,22 @@
         <p>None yet!</p>
       </div>
     </div>
+    <div class="content-block-title color-black"><strong>Add Incident Log</strong></div>
+    <div class="list-block card">
+      <ul>
+        <li>
+          <div class="item-content">
+            <div class="item-inner">
+              <div class="item-input">
+                <textarea placeholder="Incident Log message" data-bind="textInput: createIncidentLog"></textarea>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li>
+          <a href="#" class="button button-raised button-fill" style="border: 0;" data-bind="click: addIncident">Save</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
