Fix edit button font for incidents not being consistent on windows

--- a/dog-incidents.html
+++ b/dog-incidents.html
@@ -19,7 +19,7 @@
           </div>
         </div>
         <div class="card-footer">
-          <span><a href="edit-incident.html" data-bind="if: submitter === 'Kristine', click: $parent.setActiveIncident($data)"><i class="fa fa-pencil"> Edit</i></a></span>
+          <span><a href="edit-incident.html" data-bind="if: submitter === 'Kristine', click: $parent.setActiveIncident($data)"><i class="fa fa-pencil"></i> Edit</a></span>
           <span data-bind="text: submitter + ', ' + moment(date).calendar()"></span>
         </div>
       </div>
