--- a/create-dog.html
+++ b/create-dog.html
@@ -27,7 +27,7 @@
             <div class="item-inner">
               <div class="item-title label">Gender</div>
               <div class="item-input">
-                <select data-bind="options: availableGenders, selectedOptions: createDogGender"></select>
+                <select data-bind="options: availableGenders, value: createDogGender"></select>
               </div>
             </div>
           </div>
