--- a/dog.html
+++ b/dog.html
@@ -30,8 +30,7 @@
           <strong>Gender</strong>
         </div>
         <div class="col-30" style="line-height: 36px; text-align: center;">
-          <span data-bind="if: activeDog.gender == 0">Male</span>
-          <span data-bind="if: activeDog.gender == 1">Female</span>
+          <span data-bind="text: activeDog.gender"></span>
         </div>
         <div class="col-30"></div>
       </div>
