--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                       <div class="item-content">
                         <div class="item-media"><i class="fa fa-plus" style="font-size: 26px; padding-left: 10px;"></i></div>
                         <div class="item-inner">
-                          <div class="item-title">New Dog</div>
+                          <div class="item-title">Create Profile</div>
                         </div>
                       </div>
                     </a>
