Rename "Walking now" to "Now walking" for variation A

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                       <div class="item-content">
                         <div class="item-media"><img src="img/dog68.png" style="padding-left: 12px;"></div>
                         <div class="item-inner">
-                          <div class="item-title">Walking now</div>
+                          <div class="item-title">Now walking</div>
                         </div>
                       </div>
                     </a>
