--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
               <div class="navbar-inner">
                 <div class="left"><a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a></div>
                 <div class="center">Home</div>
+                <div class="right"><a href="recent.html" class="link icon-only"><i class="fa fa-clock-o"></i></a></div>
               </div>
             </div>
 
