Sort Walk me/Shower me views

--- a/tasks.html
+++ b/tasks.html
@@ -8,8 +8,8 @@
   </div>
   <div class="toolbar tabbar">
     <div class="toolbar-inner">
-      <a href="#tab-walkme" class="active tab-link">Walk me</a>
-      <a href="#tab-showerme" class="tab-link">Shower me</a>
+      <a href="#tab-walkme" class="active tab-link" data-bind="click: walkSort">Walk me</a>
+      <a href="#tab-showerme" class="tab-link" data-bind="click: showerSort">Shower me</a>
     </div>
   </div>
 
