Change home page Walk/Shower a dog link
- Add a Start new task link instead

--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
                 <div class="card-content">
                   <div class="card-content-inner">
                     <p>No ongoing tasks.</p>
-                    <p><a href="walk-me.html" class="button button-fill button-raised color-teal">Walk a dog</a></p>
-                    <p><a href="shower-me.html" class="button button-fill button-raised color-indigo">Shower a dog</a></p>
+                    <p><a href="tasks.html" class="button button-fill button-raised color-cyan">Start new task</a></p>
                   </div>
                 </div>
               </div>
