--- a/task1/index-b.html
+++ b/task1/index-b.html
@@ -36,7 +36,7 @@
               <div class="list-block">
                 <ul>
                   <li>
-                    <a href="index.html" class="item-link close-panel">
+                    <a href="index-b.html" class="item-link close-panel">
                       <div class="item-content">
                         <div class="item-media"><img src="img/home.png" style="padding-left: 12px;"></div>
                         <div class="item-inner">
