Change main folder to Version B

--- a/index.html
+++ b/index.html
@@ -56,21 +56,11 @@
                     </a>
                   </li>
                   <li>
-                    <a href="walk-me.html" class="item-link close-panel">
+                    <a href="tasks.html" class="item-link close-panel">
                       <div class="item-content">
                         <div class="item-media"><img src="img/walking.png" style="padding-left: 12px;"></div>
                         <div class="item-inner">
-                          <div class="item-title">Walk me</div>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="shower-me.html" class="item-link close-panel">
-                      <div class="item-content">
-                        <div class="item-media"><img src="img/shower.png" style="padding-left: 12px;"></div>
-                        <div class="item-inner">
-                          <div class="item-title">Shower me</div>
+                          <div class="item-title">Tasks</div>
                         </div>
                       </div>
                     </a>
@@ -174,8 +164,7 @@
                 <div class="card-content">
                   <div class="card-content-inner">
                     <p>No ongoing tasks.</p>
-                    <p><a href="walk-me.html" class="button button-fill button-raised color-teal">Walk a dog</a></p>
-                    <p><a href="shower-me.html" class="button button-fill button-raised color-indigo">Shower a dog</a></p>
+                    <p><a href="tasks.html" class="button button-fill button-raised color-cyan">Start new task</a></p>
                   </div>
                 </div>
               </div>
